--- a/.github/workflows/master_ci_cd.yml
+++ b/.github/workflows/master_ci_cd.yml
@@ -64,7 +64,7 @@ jobs:
         run: sed -i 's/{docker_user}/${{secrets.DOCKER_USER}}/g' manifests/k8s.yaml
 
       - name: update model name in k8 
-        run: sed -i 's/{model_name}/${{secrets.MODEL_NAME_TEST}}/g' manifests/k8s.yaml
+        run: sed -i 's/{model_name}/${{secrets.MODEL_NAME}}/g' manifests/k8s.yaml
 
       - name: update _ by - 
         run: sed -i 's/_/-/g' manifests/k8s.yaml
